<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.whitelist.WhiteListFragment"
    android:fitsSystemWindows="true">

    <TextView
        android:id="@+id/text_whitelist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textSize="30sp"
        android:text="@string/whitelist"
        android:textColor="@color/black"
        android:layout_alignParentTop="true"/>

    <LinearLayout
        android:id="@+id/whitelist_linear_layout"
        android:layout_width="390dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_whitelist"
        android:layout_centerHorizontal="true"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:paddingBottom="8dp">

        <EditText
            android:id="@+id/add_whitelist_text"
            android:layout_weight="0.75"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@drawable/common_google_signin_btn_icon_dark_normal_background"
            android:hint="@string/example_com"
            />

        <Button
            android:id="@+id/add_whitelist_domain_button"
            android:layout_width="0dp"
            android:layout_weight="0.25"
            android:layout_height="match_parent"
            android:text="@string/add_domain"
            android:textSize="10sp" />
    </LinearLayout>

    <View
        android:id="@+id/whitelist_divider"
        android:layout_below="@id/whitelist_linear_layout"
        android:layout_width="390dp"
        android:layout_centerHorizontal="true"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray" />

    <ExpandableListView
        android:id="@+id/whitelist_domains"
        android:layout_below="@id/whitelist_divider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:dividerHeight="0dp"
        android:divider="@null" />
</RelativeLayout>