...
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/icon"
        android:layout_width="512dp"
        android:layout_height="512dp"
        android:layout_above="@id/sign_in_button"
        android:layout_alignParentTop="true"
        android:layout_centerVertical="true"
        android:src="@mipmap/ic_launcher_foreground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
...
        app:layout_constraintVertical_bias="0.589">


    </com.google.android.gms.common.SignInButton>

    <Button
        android:id="@+id/sign_out_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/icon"
        android:layout_centerInParent="true"
        android:text="@string/sign_out"
        android:visibility="gone"
...
